Add another paragraph to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h2>Paragraph 1</h2>
 	<p>Nowy commit</p>
 	<p>drugi commit</p>
+	<p>trzeci commit</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor odio volutpat ligula facilisis, sed rutrum tortor viverra. Nullam sodales lobortis felis eget consequat. Donec sit amet faucibus purus, a tempus lectus. Suspendisse pretium volutpat justo, nec aliquet dui tempus eu. Morbi facilisis turpis sit amet leo hendrerit lacinia. Pellentesque sit amet nibh in tortor luctus accumsan nec quis metus. Curabitur laoreet dapibus eros, fringilla dignissim enim sodales vitae. Mauris viverra faucibus elementum. Phasellus ut velit dapibus dolor fringilla consectetur a nec justo. Donec nec neque quis nisi pharetra lobortis vitae ut dui. Sed at nunc suscipit, suscipit turpis in, mattis purus. Aliquam ac neque mollis, tincidunt erat id, consequat augue. In pulvinar a ante elementum mattis.
     	<a href= "http://www.google.pl" target=_blank>READ MORE</a>
     </p>
